--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,8 @@ font-family: 'Lato', sans-serif;
 text-align: center;
 }
 
-.bluesection h1, h2, h3, h4,h5, h6, p, ul, a {
-color: white;
-}
 /*----------------NAVIGATION------------*/
 nav ul {
-  display: flex;
 right: 0;
   justify-content: space-around;
   align-items: center;
@@ -26,6 +22,9 @@ right: 0;
 nav ul li {
   list-style: none;
   color: white;
+  padding-top: 10px;
+  font-size: 110%;
+  letter-spacing: 0px;
 }
 
 #calltoa {
@@ -33,8 +32,73 @@ nav ul li {
   padding: 5px;
   border-radius: 11px;
   color: black;
+     box-shadow: 0 5px 10px #1c1f1d;
+     font-weight: bold;
+    margin-top: 4px;
 }
 
+#hideshow {
+  position: relative;
+  background-color: #44D9A0;
+  margin: auto;
+  padding: 9px;
+  width: 150px;
+  border-radius: 11px;
+  color: black;
+   box-shadow: 0 10px 20px #1c1f1d;
+   z-index: 10;
+}
+
+#logo {
+  position: absolute;
+  color: white;
+  float: left;
+  padding: 12px;
+  font-size: 30px;
+  z-index: 100;
+}
+
+/*BURGERMENU*/
+.mobileMenu {
+  display: none;
+  z-index: 10;
+  background-color: black;
+  opacity: 0.95;
+  padding: 50px 0 50px 0;
+  width: 100%;
+  height: 23%;
+  clip-path: polygon(0 0, 100% 0%, 100% 84%, 0 100%);
+}
+
+.mobileMenu {
+  font-size: 1.3em;
+}
+
+#burgermenu {
+  width: 60px;
+  height: 45px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  z-index: 100;
+}
+
+#burgermenu span{
+  display: block;
+  position: relative;
+  background: white;
+    border-radius: 9px;
+  height: 7px;
+  width: 100%;
+  left: 0;
+}
+
+#calltoa {
+  display: none;
+}
 
 /*-----------HEADERSECTION-----------*/
 .bluesection {
@@ -63,4 +127,53 @@ padding: 20px 0 20px 0;
   height: 50px;
   background-color: #1989B2;
   clip-path: polygon(0 100%, 100% 0%, 100% 100%, 0 100%);
+}
+
+
+
+
+/*------------------------TABLET----------------------------*/
+@media screen and (min-width: 768px) {
+#calltoa {
+  display: flex;
+}
+#burgermenu {
+  display: none;
+}
+
+.mobileMenu {
+  display: flex;
+  background-color: inherit;
+    clip-path: 0;
+    padding: 5px;
+    width: 40%;
+    align-items: flex-start;
+}
+#hideshow {
+  display: none;
+}
+
+}
+
+
+
+/*---------------------------DESKTOP-------------------------*/
+@media screen and (min-width: 1024px) {
+#calltoa {
+  display: flex;
+}
+#burgermenu {
+  display: none;
+}
+
+.mobileMenu {
+  display: flex;
+  background-color: inherit;
+    clip-path: 0;
+}
+
+#hideshow {
+  display: none;
+}
+
 }
