--- a/css/style.css
+++ b/css/style.css
@@ -155,53 +155,34 @@ padding-top: 70px;
 padding: 20px 0 20px 0;
 }
 /*-----------footer-----------*/
-.container{
-    width: 100%;
+footer {
+    width: 90%;
     height: 30%;
     background-color: #1989B2;
-    position: absolute; 
-    bottom: 0%;
+    position: relative; 
+    bottom: 0;
     font-size: 10px;
-  
-}
-.flex{
- display: flex;
+  padding: 5%;
+     display: flex;
    align-items: center;
    justify-content: center;
-   flex-flow: column wrap;
-   align-content: stretch;
+   flex: wrap;
 }
-
-.container ul h3 {
-    position: absolute;
-    width: 100%;
-   
-}
-.container ul{
-    padding: 5%;
-}
-.ul1{
-    padding-bottom: 0%;
-    text-align: left;
-    position:relative;
-   
-}
-.ul2{
-    padding-bottom: 0%;
-    position:relative;
-   
-}
-.ul3{
-    padding-bottom: 0%;
-    position:relative;
+footer div{
+    width: 30%;
     
 }
-.ul4{
-    padding-bottom: 0%;
-    position:relative;
-   
+
+
+footer ul{
+    list-style-type: none;
 }
 
+#some{
+    width: 100px;
+    border-top: white solid 2px;
+    outline-offset: -2px
+}
 
 /*------------------------TABLET----------------------------*/
 @media screen and (min-width: 768px) {
