--- a/css/style.css
+++ b/css/style.css
@@ -156,21 +156,25 @@ padding: 20px 0 20px 0;
 }
 /*-----------footer-----------*/
 footer {
-    width: 90%;
+    width: 100%;
     height: 30%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     background-color: #1989B2;
-    position: relative; 
+    position: relative;
     bottom: 0;
     font-size: 10px;
-  padding: 5%;
      display: flex;
    align-items: center;
-   justify-content: center;
-   flex: wrap;
+   justify-content: space-around;
+   flex-wrap: wrap;
 }
 footer div{
-    width: 30%;
-    
+  display: flex;
+flex-direction: column;
+padding-top: 5%;
+    width: 35%;
+color: white;
 }
 
 
@@ -179,9 +183,10 @@ footer ul{
 }
 
 #some{
-    width: 100px;
+    width: 85%;
+    margin: auto;
+      background-color: #1989B2;
     border-top: white solid 2px;
-    outline-offset: -2px
 }
 
 /*------------------------TABLET----------------------------*/
