--- a/css/style.css
+++ b/css/style.css
@@ -175,20 +175,51 @@ flex-direction: column;
 padding-top: 5%;
     width: 35%;
 color: white;
+
+    
+}
+h3 {
+    font-weight: 300;
+    display: inline-block;
+    padding-bottom: 5px;
+    position: relative;
+    text-align: left;
+}
+h3:before{
+    content: "";
+    position: absolute;
+    width: 12%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    border-bottom: 1px solid white;
 }
 
-
-footer ul{
+footer ul {
     list-style-type: none;
+    text-align: left;
+   
 }
 
 #some{
     width: 85%;
+    height: 10%;
     margin: auto;
       background-color: #1989B2;
     border-top: white solid 2px;
 }
-
+#some i{
+    padding-top: 1px;
+    padding-bottom: 10px;
+    position: relative;
+    right: 33%;
+}
+#some img{
+    width: 90px;
+    position: relative;
+    right: -33%;
+    padding-top: 5px
+}
 /*------------------------TABLET----------------------------*/
 @media screen and (min-width: 768px) {
 #calltoa {
