--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ footer ul {
     border-top: white solid 2px;
 
 }
-<<<<<<< HEAD
+
 #some i{
     padding-top: 1px;
     padding-bottom: 10px;
@@ -264,9 +264,34 @@ max-width: 70%;
   display: none;
 }
 
+/*PRISER*/
+#skubud {
+  margin: auto;
+  width: 200px;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  background-color: #1989B2;
+  color: white;
+  font-size: 25px;
+  padding: 6px;
+  text-align: center;
+  border-radius: 11px;
+  box-shadow: 0 5px 10px #1c1f1d;
+  font-weight: bold;
+}
 
+#priser{
+  display: none;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 30px;
+  padding: 15px;
+}
 
->>>>>>> master
+#priser h3 {
+  color: #1989B2;
+}
+
 /*------------------------TABLET----------------------------*/
 @media screen and (min-width: 768px) {
 #calltoa {
