--- a/css/style.css
+++ b/css/style.css
@@ -390,5 +390,15 @@ max-width: 70%;
 #hideshow {
   display: none;
 }
-
+    footer {
+     width: 50%;
+           
+    }
+    #map{
+        width: 50%;
+        height: 20%;
+        position: absolute;
+        right: 0;
+        
+    }
 }
