--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,10 @@ nav ul li {
 #calltoa {
   background-color: #44D9A0;
   padding: 5px;
-  border-radius: 11px;
+  border-radius: 10px;
   color: black;
-     box-shadow: 0 5px 10px #1c1f1d;
-     font-weight: bold;
+
+    font-weight: 300;
     margin-top: 4px;
 }
 
@@ -47,18 +47,18 @@ nav ul li {
   margin: auto;
   padding: 9px;
   width: 150px;
-  border-radius: 11px;
+  border-radius: 11px; 
   color: black;
-   box-shadow: 0 10px 20px #1c1f1d;
    z-index: 10;
+   
 }
 
 #logo {
   position: absolute;
   color: white;
   float: left;
-  padding: 12px;
-  font-size: 30px;
+  padding: 10px;
+  font-size: 20px;
   z-index: 100;
 }
 
@@ -80,7 +80,7 @@ nav ul li {
 
 #burgermenu {
   width: 48px;
-  height: 35px;
+  height: 30px;
   position: absolute;
   right: 10px;
   top: 10px;
@@ -95,7 +95,7 @@ nav ul li {
   position: relative;
   background: white;
     border-radius: 9px;
-  height: 7px;
+  height: 4px;
   width: 100%;
   left: 0;
 }
@@ -115,7 +115,7 @@ nav ul li {
 
 /*-----------HEADERSECTION-----------*/
 .bluesection {
-background-color: #1989B2;
+background-color: #0C83AF;
 width: 100%;
 color: white;
 text-align: center;
@@ -151,10 +151,12 @@ text-align: center;
 }
 
 .bluesectionheader h1 {
-font-size: 1.5em;
+font-size: 1.6em;
 padding-top: 70px;
 }
-
+.bluesectionheader h2{
+   font-size: 1em; 
+}
 .bluesectionheader p {
 padding: 20px 0 20px 0;
 }
@@ -309,6 +311,23 @@ max-width: 70%;
   flex-direction: column;
   margin: auto;
 }
+#flemmingsection p {
+   padding-top: 3%; 
+    font-size: 16px;
+    padding-left: 5%;
+    text-align: left;
+    
+}
+#flemmingsection ul li{
+    text-align: left;
+    list-style: none;
+    margin: 10px;
+    padding-left: 2%;
+}
+#uber {
+   text-align: left;
+    padding-left: 5%;
+}
 
 #flemmingandry {
 margin: auto;
@@ -365,7 +384,10 @@ width: 100%;
 #ydelser div {
   width: 34%;
 }
-
+#flemmingsection p{
+        width: 30px;
+    }
+    
 /*---------------------------Tablet footer-------------------------*/
     footer div{
         font-size: 15px;
