--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,18 @@
 * {
   margin: 0;
   padding: 0;
-scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
-h1, h2, h3, h4,h5, h6, p, ul, a {
-font-family: 'Lato', sans-serif;
-text-align: center;
-    text-decoration: none;
-    
+h1, h2, h3, h4, h5, h6, p, ul, a {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+  text-decoration: none;
 }
-
 
 /*----------------NAVIGATION------------*/
 nav ul {
-right: 0;
+  right: 0;
   justify-content: space-around;
   align-items: center;
   width: 50vw;
@@ -36,9 +34,9 @@ nav ul li {
   padding: 5px;
   border-radius: 11px;
   color: black;
-     box-shadow: 0 5px 10px #1c1f1d;
-     font-weight: bold;
-    margin-top: 4px;
+  box-shadow: 0 5px 10px #1c1f1d;
+  font-weight: bold;
+  margin-top: 4px;
 }
 
 #hideshow {
@@ -49,8 +47,8 @@ nav ul li {
   width: 150px;
   border-radius: 11px;
   color: black;
-   box-shadow: 0 10px 20px #1c1f1d;
-   z-index: 10;
+  box-shadow: 0 10px 20px #1c1f1d;
+  z-index: 10;
 }
 
 #logo {
@@ -90,11 +88,11 @@ nav ul li {
   z-index: 100;
 }
 
-#burgermenu span{
+#burgermenu span {
   display: block;
   position: relative;
   background: white;
-    border-radius: 9px;
+  border-radius: 9px;
   height: 7px;
   width: 100%;
   left: 0;
@@ -115,19 +113,19 @@ nav ul li {
 
 /*-----------HEADERSECTION-----------*/
 .bluesection {
-background-color: #1989B2;
-width: 100%;
-color: white;
-text-align: center;
+  background-color: #1989B2;
+  width: 100%;
+  color: white;
+  text-align: center;
 }
 
 .bluesection h1 {
-font-size: 1.5em;
-padding-top: 70px;
+  font-size: 1.5em;
+  padding-top: 70px;
 }
 
 .bluesection p {
-padding: 20px 0 20px 0;
+  padding: 20px 0 20px 0;
 }
 
 .bluebottom {
@@ -143,81 +141,79 @@ padding: 20px 0 20px 0;
 }
 
 .bluesectionheader {
-background-color: #1989B2;
-width: 100%;
-height: 280px;
-color: white;
-text-align: center;
+  background-color: #1989B2;
+  width: 100%;
+  height: 280px;
+  color: white;
+  text-align: center;
 }
 
 .bluesectionheader h1 {
-font-size: 1.5em;
-padding-top: 70px;
+  font-size: 1.5em;
+  padding-top: 70px;
 }
 
 .bluesectionheader p {
-padding: 20px 0 20px 0;
+  padding: 20px 0 20px 0;
 }
+
 /*-----------footer-----------*/
 footer {
-    width: 100%;
-    height: 200px;
-    padding-bottom: 50px;
-    background-color: #1989B2;
-    position: relative;
-    font-size: 10px;
-     display: flex;
-   align-items: center;
-   justify-content: space-around;
-   flex-wrap: wrap;
-}
-footer div{
+  width: 100%;
+  height: 200px;
+  padding-bottom: 50px;
+  background-color: #1989B2;
+  position: relative;
+  font-size: 10px;
   display: flex;
-padding-top: 5%;
-    width: 35%;
-color: white;
-    font-size: 15px;
-
-
-
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
+
+footer div {
+  display: flex;
+  padding-top: 5%;
+  width: 35%;
+  color: white;
+  font-size: 15px;
+}
+
 footer h3 {
-    padding-bottom: 5px;
-    position: relative;
-    text-align: justify;
-    margin: auto;
-
+  padding-bottom: 5px;
+  position: relative;
+  text-align: justify;
+  margin: auto;
 }
-footer h3:before{
-    content: "";
-    position: absolute;
-    width: 15px;
-    bottom: 0;
-    left: 0;
-    border-bottom: 1px solid white;
+
+footer h3:before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  bottom: 0;
+  left: 0;
+  border-bottom: 1px solid white;
 }
 
 footer ul {
-    list-style-type: none;
-    text-align: justify;
-    margin: auto;
-
+  list-style-type: none;
+  text-align: justify;
+  margin: auto;
 }
 
-#some{
-    width: 85%;
-    height: 50px;
-    margin: auto;
-      background-color: #1989B2;
-    border-top: white solid 2px;
-
+#some {
+  width: 85%;
+  height: 50px;
+  margin: auto;
+  background-color: #1989B2;
+  border-top: white solid 2px;
 }
 
-#some i{
-    padding-top: 1px;
-    padding-bottom: 10px;
-    left: 0;
-    color: black;
+#some i {
+  padding-top: 1px;
+  padding-bottom: 10px;
+  left: 0;
+  color: black;
 }
 
 #some div {
@@ -225,20 +221,18 @@ footer ul {
   align-items: center;
   justify-content: space-around;
   width: 100px;
-        position: absolute;
-        padding-top: 4px;
-    font-size: 22px;
-
+  position: absolute;
+  padding-top: 4px;
+  font-size: 22px;
 }
 
-#some img{
-    width: 90px;
-    position: absolute;
-    padding-top: 5px;
-    right: 0;
-    padding-right: 7.5%;
+#some img {
+  width: 90px;
+  position: absolute;
+  padding-top: 5px;
+  right: 0;
+  padding-right: 7.5%;
 }
-
 
 /*----------------Elementer til siden-------------*/
 #ydelser {
@@ -258,9 +252,8 @@ footer ul {
   display: flex;
   flex-direction: column;
   padding-top: 30px;
-align-items: center;
-max-width: 70%;
-
+  align-items: center;
+  max-width: 70%;
 }
 
 #ydelser img {
@@ -289,7 +282,7 @@ max-width: 70%;
   font-weight: bold;
 }
 
-#priser{
+#priser {
   display: none;
   width: 80%;
   margin: auto;
@@ -301,7 +294,6 @@ max-width: 70%;
   color: #1989B2;
 }
 
-
 /*OM FLEMMING*/
 #flemmingsection {
   width: 80%;
@@ -311,161 +303,183 @@ max-width: 70%;
 }
 
 #flemmingandry {
-margin: auto;
-width: 100%;
+  margin: auto;
+  width: 100%;
 }
 
 #map {
   display: none;
 }
 
-
 /*------------------------TABLET----------------------------*/
 @media screen and (max-width: 1023px) (min-width: 768px) {
-#calltoa {
-  display: flex;
-}
-#burgermenu {
-  display: none;
-}
+  #calltoa {
+    display: flex;
+  }
 
-.mobileMenu {
-  display: flex;
-  background-color: inherit;
+  #burgermenu {
+    display: none;
+  }
+
+  .mobileMenu {
+    display: flex;
+    background-color: inherit;
     clip-path: 0;
     padding: 5px;
     width: 40%;
     align-items: flex-start;
-}
-#hideshow {
-  display: none;
-}
+  }
 
-.flexboxx {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-}
+  #hideshow {
+    display: none;
+  }
 
-#dnastring {
+  .flexboxx {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  #dnastring {
     position: absolute;
     padding-top: 35px;
-  display: flex;
-  height: 50%;
-  width: 10%;
-  opacity: 0.8;
+    display: flex;
+    height: 50%;
+    width: 10%;
+    opacity: 0.8;
+  }
+
+  #ydelser {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  #ydelser div {
+    width: 34%;
+  }
+
+  /*---------------------------Tablet footer-------------------------*/
+  footer div {
+    font-size: 15px;
+    width: 19%;
+    padding-left: 3%;
+  }
+
+  #some {
+    width: 95%;
+  }
+
+  #some i {
+    font-size: 26px;
+    color: black;
+  }
+
+  #some img {
+    position: absolute;
+    right: 0;
+    padding-right: 2.7%;
+  }
+
+  #some div {
+    position: absolute;
+    padding-top: 2px;
+  }
 }
-
-#ydelser {
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-#ydelser div {
-  width: 34%;
-}
-
-/*---------------------------Tablet footer-------------------------*/
-    footer div{
-        font-size: 15px;
-        width: 19%;
-        padding-left: 3%;
-
-    }
-    #some {
-        width: 95%;
-
-    }
-    #some i{
-        font-size: 26px;
-        color: black;
-    }
-    #some img{
-        position: absolute;
-        right: 0;
-        padding-right: 2.7%;
-    }
-    #some div{
-        position: absolute;
-        padding-top: 2px;
-    }
-}
-
-
 
 /*---------------------------DESKTOP-------------------------*/
 @media screen and (min-width: 1024px) {
-#calltoa {
-  display: flex;
-}
-#burgermenu {
-  display: none;
-}
+  #calltoa {
+    display: flex;
+  }
 
-.mobileMenu {
-  display: flex;
-  background-color: inherit;
+  #burgermenu {
+    display: none;
+  }
+
+  .mobileMenu {
+    display: flex;
+    background-color: inherit;
     clip-path: 0;
     padding: 5px;
     width: 40%;
     align-items: flex-start;
-}
+  }
 
-.flexboxx {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-}
+  .flexboxx {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
 
-#dnastring {
+  #dnastring {
     position: absolute;
     padding-top: 35px;
-  display: flex;
-  height: 50%;
-  width: 10%;
-  opacity: 0.8;
-}
+    display: flex;
+    height: 50%;
+    width: 10%;
+    opacity: 0.8;
+  }
 
-#ydelser {
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
+  #ydelser {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 
-#ydelser div {
-  width: 34%;
-}
+  #ydelser div {
+    width: 34%;
+  }
 
-#hideshow {
-  display: none;
-}
+  #hideshow {
+    display: none;
+  }
+
   footer {
     height: 300px;
-     width: 50%;
-    }
+    width: 50%;
+  }
 
-    footer h3, footer li {
-      font-size: 1.5em;
-    }
+  footer h3, footer li {
+    font-size: 23px;
+  }
 
-    #map{
-      display: inline-block;
-        width: 45%;
-        height: 150px;
-        position: absolute;
-        right: 5%;
-        background-color: #1989B2;
-        padding-top: 100px;
-    }
+  #map {
+    display: inline-block;
+    width: 45%;
+    height: 230px;
+    position: absolute;
+    right: 5%;
+    background-color: #1989B2;
+    padding-top: 46px;
+    color: white;
+    font-weight: bolder;
+    font-size: 23px;
+    margin: 0;
+    text-align: left;
+  }
 
-    #bluemini {
-      display: inline-block;
-      position: absolute;
-      background-color: #1989B2;
-      right: 0;
-      height: 350px;
-      width: 10%;
+  #bluemini {
+    display: inline-block;
+    position: absolute;
+    background-color: #1989B2;
+    right: 0;
+    height: 350px;
+    width: 10%;
+  }
 
-    }
+  #marker {
+    background-image: url('images/point.png');
+    background-size: cover;
+    width: 50px;
+    height: 60px;
+    border-radius: ;
+    cursor: pointer;
+  }
+
+  .mapboxgl-popup {
+    max-width: 200px;
+    opacity: 0.8;
+    background-color: blue;
+  }
 }
