--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ nav ul li {
 
 /*-----------HEADERSECTION-----------*/
 .bluesection {
-background-color: #0C83AF;
+background-color: #1989B2;
 width: 100%;
 color: white;
 text-align: center;
