--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,10 @@ h4 a {
   #ydelser div {
     width: 34%;
   }
-
+#flemmingandry{
+  margin: auto;
+  width: 50%;
+}
   /*---------------------------Tablet footer-------------------------*/
   footer div {
     font-size: 15px;
