--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ nav a:hover {
   margin-top: -0.6px;
     background-color: #1989B2;
       clip-path: polygon(0 0, 100% 0%, 100% 0%, 0 100%);
+      -webkit-clip-path: polygon(0 0, 100% 0%, 100% 0%, 0 100%);
 }
 
 .bluetop {
