--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ nav ul li {
   padding: 50px 0 50px 0;
   width: 100%;
   height: 230px;
-  clip-path: polygon(0 0, 100% 0%, 100% 85%, 0 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0%, 100% 85%, 0 100%);
 }
 
 .mobileMenu {
